--- a/pom.xml
+++ b/pom.xml
@@ -101,6 +101,13 @@
             <version>1.0-rc2</version>
             <type>jar</type>
         </dependency>
+
+        <dependency>
+            <groupId>com.jcraft</groupId>
+            <artifactId>jsch</artifactId>
+            <version>0.1.42</version>
+        </dependency>
+
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
