--- a/pom.xml
+++ b/pom.xml
@@ -162,6 +162,13 @@
             <version>1.8.0.7</version>
         </dependency>
         
+        <!-- Groovy -->
+        <dependency>
+            <groupId>org.codehaus.groovy</groupId>
+            <artifactId>groovy-all</artifactId>
+            <version>1.6.5</version>
+        </dependency>
+
         <!-- Export formats -->
         <dependency>
             <groupId>org.apache.poi</groupId>
