--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,31 @@
 
     <!-- Things we need to build with. -->
     <dependencies>
+
+        <dependency>
+            <groupId>org.eclipse</groupId>
+            <artifactId>swt</artifactId>
+            <version>3.3.0-v3346</version>
+        </dependency>
+
+        <dependency>
+            <groupId>swt</groupId>
+            <artifactId>swt-win32</artifactId>
+            <version>2.1.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>swt</groupId>
+            <artifactId>jface</artifactId>
+            <version>3.0.1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>tablelayout</groupId>
+            <artifactId>TableLayout</artifactId>
+            <version>20050920</version>
+        </dependency>
+
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>servlet-api</artifactId>
