--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,12 @@
     <dependencies>
 
         <dependency>
+            <groupId>org.swinglabs</groupId>
+            <artifactId>swingx</artifactId>
+            <version>1.6</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.eclipse</groupId>
             <artifactId>swt</artifactId>
             <version>3.3.0-v3346</version>
