--- a/pom.xml
+++ b/pom.xml
@@ -133,6 +133,12 @@
             <type>jar</type>
         </dependency>
 
+         <dependency>
+           <groupId>com.google.guava</groupId>
+           <artifactId>guava</artifactId>
+           <version>r03</version>
+        </dependency>
+
         <dependency>
             <groupId>com.jcraft</groupId>
             <artifactId>jsch</artifactId>
